--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
     margin-right: auto;
 }
 .main-header {
-    background-color: #687fe8;
+    background-color: #5c9bc9;
     display: flex;
     justify-content: center;
     margin: 0;
