--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main {
     padding: 10px;
 }
 .container-text p {
-    font-family: "Acme", serif;
+    font-family: "Gill Sans", sans-serif;
     color: #2b64a0;
     font-size: 20px;
 }
