--- a/css/style.css
+++ b/css/style.css
@@ -92,12 +92,16 @@ main {
     max-width: 700px;
     margin: 0 auto;
     border-radius: 20px;
+    border: 5px solid;
+    padding: 20px;
 }
 #persegi-panjang {
     background-color: #bbd9e7;
     max-width: 700px;
     margin: 0 auto;
     border-radius: 20px;
+    border: 5px solid;
+    padding: 20px;
 }
 section {
     padding: 0 16px;
