--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ main {
 .container-text h1 {
     font-family: "Gill Sans", serif;
     color: #2b64a0;
-    font-size: 24px;
+    font-size: 26px;
 }
 .nav-fitur {
     display: flex;
@@ -128,7 +128,7 @@ section {
     margin-right: auto;
 }
 .calculate-content h2 {
-    font-family: "Gill Sans", serif;
+    font-family: "Acme", serif;
     padding-bottom: 20px;
 }
 .calculate-content p {
@@ -137,7 +137,7 @@ section {
     padding-top: 10px;
 }
 section h1 {
-    font-family: "Gill Sans", serif;
+    font-family: "Acme", serif;
     color: #2b64a0;
     font-size: 26px;
     padding-bottom: 10px;
