--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
     text-align: center;
 }
 .main-header h1 {
-    font-family: "Gill Sans", sans-serif;
+    font-family: "Acme", serif;
     color: #bbd9e7;
     font-size: 24px;
     text-align: justify;
@@ -57,7 +57,7 @@ main {
     padding: 10px;
 }
 .container-text h1 {
-    font-family: "Gill Sans", serif;
+    font-family: "Acme", serif;
     color: #2b64a0;
     font-size: 26px;
 }
