--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ main {
 }
 .nav-fitur summary:hover {
     color: #fffcef;
-    background-color: #2b64a0;
+    background-color: #ecec2f;
     transform: scale(1.05);
     z-index: 1;
 }
@@ -111,12 +111,15 @@ section {
     margin: 20px;
 }
 .rumus {
+    font-family: "Quicksand", serif;
     padding: 10px;
 }
 .rumus h2 {
+    font-family: "Quicksand", serif;
     font-size: 26px;
 }
 .rumus p {
+    font-family: "Quicksand", serif;
     font-size: 18px;
 }
 .calculate-content {
