--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ main {
     z-index: 1;
 }
 #persegi {
-    color: #5c9bc9;
+    color: #0b446d;
     background-color: #bbd9e7;
     max-width: 700px;
     margin: 0 auto;
@@ -97,7 +97,7 @@ main {
     padding: 20px;
 }
 #persegi-panjang {
-    color: #5c9bc9;
+    color: #0b446d;
     background-color: #bbd9e7;
     max-width: 700px;
     margin: 0 auto;
